{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 51,
  "lineage": "79f60055-db87-c032-ac32-d98befecf16a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/web-frontip",
                "name": "web-frontip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/publicIPAddresses/web-lb-ip"
              }
            ],
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb",
            "location": "eastus",
            "name": "web-lb",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lbip",
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/backendpool-1",
            "loadbalancer_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "backendpool-1"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.lbip",
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/probes/Tcp-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "Tcp-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.lbip",
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/backendAddressPools/backendpool-1"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/frontendIPConfigurations/web-frontip",
            "frontend_ip_configuration_name": "web-frontip",
            "frontend_port": 80,
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/loadBalancingRules/web-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb",
            "name": "web-lb-rule",
            "probe_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/loadBalancers/web-lb/probes/Tcp-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.web_lb_probe",
            "azurerm_public_ip.lbip",
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_for_linuxvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkInterfaces/HR-Dev-nic",
            "internal_domain_name_suffix": "hy3vkp5hljbejiog0aozq2er3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "weblinuxpubip",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/publicIPAddresses/HR-Dev-pubip-weblinux-vm",
                "subnet_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/HR-Dev-myvnet-1-mywebsubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-29-E6-23",
            "name": "HR-Dev-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "HR-Dev-rg-default-574359",
            "virtual_machine_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Compute/virtualMachines/HR-Dev-weblinuxvm"
          },
          "dependencies": [
            "azurerm_public_ip.pubip_for_weblinuxvm",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkInterfaces/HR-Dev-nic|/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg",
            "network_interface_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkInterfaces/HR-Dev-nic",
            "network_security_group_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic_for_linuxvm",
            "azurerm_network_security_group.webnsg",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg",
            "location": "eastus",
            "name": "HR-Dev-myvnet-1-mywebsubnet-nsg",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "22",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule_port-22",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "443",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule_port-443",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "80",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Rule_port-80",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "webnsgrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "443",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg/securityRules/Rule_port-443",
            "name": "Rule_port-443",
            "network_security_group_name": "HR-Dev-myvnet-1-mywebsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webnsg",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "80",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg/securityRules/Rule_port-80",
            "name": "Rule_port-80",
            "network_security_group_name": "HR-Dev-myvnet-1-mywebsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webnsg",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "22",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg/securityRules/Rule_port-22",
            "name": "Rule_port-22",
            "network_security_group_name": "HR-Dev-myvnet-1-mywebsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.webnsg",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/publicIPAddresses/HR-Dev-bastion-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.44.51",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "HR-Dev-bastion-pub-ip",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/publicIPAddresses/web-lb-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.236.134.197",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-lb-ip",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environmnet": "Dev",
              "owners": "HR"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip_for_weblinuxvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/publicIPAddresses/HR-Dev-pubip-weblinux-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.88.13.221",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "HR-Dev-pubip-weblinux-vm",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_service_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HR-Dev-rg-default-574359",
            "virtual_network_name": "HR-Dev-myvnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/HR-Dev-myvnet-1-mywebsubnet",
            "name": "HR-Dev-myvnet-1-mywebsubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "HR-Dev-rg-default-574359",
            "virtual_network_name": "HR-Dev-myvnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "webnsgass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/HR-Dev-myvnet-1-mywebsubnet",
            "network_security_group_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg",
            "subnet_id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/HR-Dev-myvnet-1-mywebsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.webnsg",
            "azurerm_network_security_rule.webnsgrule",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.websub",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3f553b3e-5ae7-4442-a1c6-d01d987091e8",
            "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1",
            "location": "eastus",
            "name": "HR-Dev-myvnet-1",
            "resource_group_name": "HR-Dev-rg-default-574359",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/HR-Dev-myvnet-1-mywebsubnet",
                "name": "HR-Dev-myvnet-1-mywebsubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/networkSecurityGroups/HR-Dev-myvnet-1-mywebsubnet-nsg"
              },
              {
                "address_prefixes": [
                  "10.1.100.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/8dbd13eb-c593-46e3-9c91-862635533188/resourceGroups/HR-Dev-rg-default-574359/providers/Microsoft.Network/virtualNetworks/HR-Dev-myvnet-1/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environmnet": "Dev",
              "owners": "HR"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}